src/test/resources/annotator/DuplicateOneofFieldName.proto
syntax = "proto3";

package annotator;

message TestMessage {
    int32 <error descr="Duplicate field name: field">field</error> = 1;

    oneof action {
        int32 <error descr="Duplicate field name: field">field</error> = 2;
    }
}